--- a/public/css/index.css
+++ b/public/css/index.css
@@ -65,7 +65,7 @@ html {
 /*脚*/
 .footer{
     width: 100%;
-    min-width: 375px;
+    min-width: 30rem;
     height: 4rem;
     position: fixed;
     bottom: 0;
